--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
-    <title>Magpie DORA | Version 1</title>
+    <title>MAGPIE AI | Version 1</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/pdfjs-dist@4.1.392/web/pdf_viewer.min.css"
