--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="https://www.google.com/recaptcha/api.js"></script>
   </head>
   <body>
-    <div id="app"></div>
+    <div class="grid" id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
